* Fixed: Banner Meta box display issue on Edit Page screen in admin.
* Fixed: Top padding issues when combining a transparent header, page banner and custom layout all on the same page.
* Fixed: Javascript error when no custom image specified for Google map marker.
* Fixed: Modal window not working with `[popup]` shortcode.

--------------------------------------------------------------

2.0.2 - 10/15/2015
------------------

* **Updated Theme Blvd framework to 2.5.2**
* New: Optional width and height scaling options for custom Google map marker images.
* Improvement: Better handling of svg icons in IE9/10.
* Improvement: Hero unit slider display on mobile.
* Improvement: Allow percentages to work properly for image element display width in Layout Builder.
* Improvement: JavaScript files moved to footer. [More Info](http://news.themeblvd.com/2015/09/15/frontend-scripts-moved-to-footer-in-framework-2-5-2-update/)
* Improvement: Security of outputted localized text strings.
* Improvement: Security of outputted data from various user-edited elements.
* Improvement: Security of outputted urls and enqueued scripts and stylesheets.
* Improvement: Filters for modifying sorting menu for post grids and post showcases.
* Improvement: Nicer looking changelog in theme update system, when clicking, "View version X details."
* Fixed: WooCommerce cart thumbnail sizing issue in Firefox.
* Fixed: In executive base, standard header background elements were being outputted with Transparent header.
* Fixed: Parallax background fallback not being horizontally centered in IE9.
* Fixed: Added missing localization for theme bases admin page text.
* Fixed: Live changelog link in theme options footer not working.
* Fixed: Blog and Post Showcase page templates not obeying WordPress page privacy settings.
* Fixed: Negative horizontal margin overflow with "popout" columns element in Layout Builder.
* Fixed: Mini post lists with hidden featured images not displaying correctly.