@@ -9,6 +9,7 @@ Jump Start Changelog
 * Fixed: Top padding issues when combining a transparent header, page banner and custom layout all on the same page.
 * Fixed: Javascript error when no custom image specified for Google map marker.
 * Fixed: Modal window not working with `[popup]` shortcode.
+* Fixed: Sticky menu not displaying when adding a parallax background image to site header from theme options.
 
 --------------------------------------------------------------
 
